[package]
name = "eddie"
version = "0.1.0"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
edit-distance = "2.1.0"
criterion = "0.3"
distance = "0.4"
txtdist = "0.2"
natural = "0.3"
strsim = "0.9"
rand = "0.7"

[[bench]]
name = "damlev"
harness = false

[[bench]]
name = "leven"
harness = false

[[bench]]
name = "jaro"
harness = false

[[bench]]
name = "jarwin"
harness = false
