[package]
name = "eddie"
description = """
Fast and well-tested implementations of common edit distance/string similarity metrics:
Levenshtein, Damerau-Levenshtein, Jaro, and Jaro-Winkler.
"""
version = "0.1.0"
edition = "2018"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
homepage = "http://github.com/thaumant/eddie"
repository = "http://github.com/thaumant/eddie"
license = "MIT"
categories = [
    "algorithms",
    "text-processing",
]
keywords = [
    "jaro",
    "jaro-winkler",
    "levenshtein",
    "damerau-levenshtein",
    "matching",
    "fuzzy",
    "search",
    "text",
    "string",
    "similarity",
    "distance",
]

[dependencies]

[dev-dependencies]
edit-distance = "2.1.0"
criterion = "0.3"
distance = "0.4"
txtdist = "0.2"
natural = "0.3"
strsim = "0.9"
rand = "0.7"

[[bench]]
name = "damlev"
harness = false

[[bench]]
name = "leven"
harness = false

[[bench]]
name = "jaro"
harness = false

[[bench]]
name = "jarwin"
harness = false
