[package]
name = "eddie"
description = """
Fast and well-tested implementations of edit distance/string similarity metrics:
Levenshtein, Damerau-Levenshtein, Hamming, Jaro, and Jaro-Winkler.
"""
version = "0.2.4"
edition = "2018"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
homepage = "http://github.com/thaumant/eddie"
repository = "http://github.com/thaumant/eddie"
documentation = "https://docs.rs/eddie/"
license = "MIT"
categories = [
    "algorithms",
    "text-processing",
]
keywords = [
    "levenshtein",
    "hamming",
    "jaro",
    "text",
]

[dependencies]

[dev-dependencies]
edit-distance = "2.1.0"
criterion = "0.3"
distance = "0.4"
txtdist = "0.2"
natural = "0.3"
strsim = "0.9"
rand = "0.7"

[[bench]]
name = "leven"
harness = false

[[bench]]
name = "damlev"
harness = false

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "jaro"
harness = false

[[bench]]
name = "jarwin"
harness = false
